fix margin and spacing

--- a/css.css
+++ b/css.css
@@ -12,8 +12,8 @@ body{
   justify-content: space-around;
   background-color: burlywood;
   height: 100vh;
-  margin-right:10%;
-  margin-left:10%;
+  margin-right:17%;
+  margin-left:17%;
 }
 
 /* Navigation bar styling */
@@ -21,14 +21,21 @@ body{
   display: flex;
   flex-direction: column;
   background-color: red;
-  width: 30%;
+  width: 22%;
   height: 60%;
 }
 
 .navButtons {
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
   height: 100%;
+  padding: 1% 1% 1% 10%;
+  font-size: large;
+  font-weight: bold;
+
+
+
 }
 
 .search {
@@ -41,20 +48,17 @@ a {
   margin-bottom: 4%;
 }
 
-.homebtn {
-  border-radius: 100px;
-  width: 40px;
-  height: 40px;
-  margin-top: 15px;
-  margin-left: 15px;
-}
-
 .tweetbtn {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 60%;
-  height: 100%;
+  height: 10%;
+  border-radius: 25px;
+}
+
+.fa-twitter {
+  margin: 3% 0% 0% 7%;
 }
 
 /* Main section styling */
@@ -62,7 +66,7 @@ a {
   display: flex;
   flex-direction: column;
   background-color:green;
-  width: 50%;
+  width: 62%;
 }
 
 .posts {
@@ -101,7 +105,7 @@ a {
   align-items: center;
   flex-direction: column;
   background-color:blue;
-  width: 20%;
+  width: 35%;
 }
 
 .top_half {
